# robotBrain

./: CMakeLists.txt  README  package.xml
inc/robot_brain/: opencv.hpp  robot.h  robot.hpp
launch/: atxmega.launch  calibrate.launch  openCV.launch  robot.launch
msg/: opencvMessage.msg
src/: atxmegaTalker.cpp  calibrate.cpp  face_detect.cpp  image_comm_pub_node2.cpp  image_comm_sub_node.cpp  openSURF.cpp~  opencv.cpp  robot.cpp  robot_main_node.cpp  robot_opencv_node.cpp
