<?xml version="1.0"?>
<package>
  <name>robotBrain</name>
  <version>0.0.0</version>
  <description>The robotBrain package</description>

  <maintainer email="rmolin88@gmail.com">Reinaldo Molina</maintainer>


  <license>BSD</license>

	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
  
	<build_depend>std_msgs</build_depend>
	<!--<build_depend>SerialStream</build_depend>-->
	<build_depend>sensor_msgs</build_depend>
	<build_depend>joy</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>OpenCV</build_depend>
	<!--<build_depend>message_runtime</build_depend>-->
	
	<run_depend>roscpp</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>
  
	<run_depend>joy</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend> 
<!--  	<run_depend>SerialStream</run_depend>
	<run_depend>math</run_depend>
	<run_depend>iostream</run_depend>-->
  
  
</package>
