<?xml version="1.0"?>
<package>
  <name>robot_brain</name>
  <version>0.0.0</version>
  <description>The robot_brain package</description>

  <maintainer email="rmolin88@gmail.com">Reinaldo Molina</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  
</package>
